# FTServoCooperation

./: CMakeLists.txt  README.en.md  README.md  package.xml
bash/: Servo12Control.sh  multi_servo_cooperation.sh
config/: four_camera.yaml
include/ftservoControl/: FEETECHservo.h  math_tools.h
include/ftservocontrol/: FEETECHservo.h  multiServoControl.h  singleServoControl.h
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ftservocontrol/include/ftservocontrol/msg/: landmark.h  landmark.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/ftservocontrol/include/ftservocontrol/msg/detail/: landmark__functions.c  landmark__functions.h  landmark__rosidl_typesupport_fastrtps_cpp.hpp  landmark__rosidl_typesupport_introspection_c.h  landmark__rosidl_typesupport_introspection_cpp.hpp  landmark__struct.h  landmark__struct.hpp  landmark__type_support.cpp
install/ftservocontrol/lib/ftservocontrol/: Multi_Servogp_Control  Single_Servogp_Control  WritePos  initialize
install/ftservocontrol/share/ament_index/resource_index/package_run_dependencies/: ftservocontrol
install/ftservocontrol/share/ament_index/resource_index/parent_prefix_path/: ftservocontrol
install/ftservocontrol/share/ftservocontrol/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ftservocontrol/share/ftservocontrol/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  ftservocontrolConfig.cmake  ftservocontrol__rosidl_generator_cExport-noconfig.cmake  ftservocontrol__rosidl_generator_cExport.cmake  ftservocontrol__rosidl_generator_cppExport.cmake  ftservocontrol__rosidl_typesupport_cExport.cmake  ftservocontrol__rosidl_typesupport_cppExport-noconfig.cmake  ftservocontrol__rosidl_typesupport_introspection_cExport-noconfig.cmake  ftservocontrol__rosidl_typesupport_introspection_cExport.cmake  ftservocontrol__rosidl_typesupport_introspection_cppExport-noconfig.cmake  ftservocontrol__rosidl_typesupport_introspection_cppExport.cmake
install/ftservocontrol/share/ftservocontrol/launch/: Servo12Control.launch.py  ServoControl.launch.py  initial.launch.py
install/ftservocontrol/share/ftservocontrol/msg/: Landmark.idl
launch/: Servo12Control.launch  Servo12Control.launch.py  Servo34Control.launch  Servo34Control.launch.py  Servo56Control.launch  Servo78Control.launch  ServoControl.launch.py  control.launch  initial.launch  initial.launch.py
log/: latest_build
rviz/: servocontrol.rviz
src/: FEETECHservo.cpp  Multi_Servogp_Control.cpp  Single_Servogp_Control.cpp  Target_Trajectory.cpp  Target_Trajectory_Simulation.cpp  WritePos.cpp  base2servogroup.cpp  control.cpp  initialize.cpp  math_tools.cpp  multiServoControl.cpp  singleServoControl copy.cpp  singleServoControl.cpp
toolbox/: cost_values_process.py
